# kurdish_sorani_tools_python

./: LICENSE  README.md  pyproject.toml
kurdish_characters-1.0.1/: LICENSE  MANIFEST.in  PKG-INFO  README.md  example.py  pyproject.toml  setup.py
kurdish_characters-1.0.1/Kurdish_Characters/: Kurdish_Characters.py  __init__.py
kurdish_kivy_app/: main.py
kurdish_tkinter_app/: main.py
src/kurdish_sorani_tools/: __init__.py  calendar.py  color.py  commas.py  count_suffix.py  currency.py  date_time.py  digit_to_word.py  digits.py  greeting.py  is_kurdish.py  keyboard.py  normalizer.py  number_range.py  number_to_words.py  number_validator.py  ordinal.py  phone.py  pluralization.py  relative_time.py  sentence.py  string_utils.py  text_direction.py  tkinter_support.py  url_fix.py  validators.py  words_to_number.py
src/kurdish_sorani_tools/assets/lang/: ar.json  ckb.json  en.json
