[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kurdish-sorani-tools"
version = "0.1.2"
description = "ئامرازەکانی کوردی سۆرانی - Kurdish Sorani language utilities for Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Dana Sherzad"}
]
keywords = ["kurdish", "sorani", "ckb", "nlp", "text-processing", "kurdistan", "iraq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dana-1sherzad/kurdish_sorani_tools_python"
Repository = "https://github.com/dana-1sherzad/kurdish_sorani_tools_python"
Issues = "https://github.com/dana-1sherzad/kurdish_sorani_tools_python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kurdish_sorani_tools" = ["assets/lang/*.json"]
